--- a/src/site.scss
+++ b/src/site.scss
@@ -4,3 +4,6 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 
 //bootstrap
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+//site styles
+@import "./components/home/Homepage.component";
