--- a/src/site.scss
+++ b/src/site.scss
@@ -5,5 +5,8 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 //bootstrap
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
+//main color palette
+@import "./palette";
+
 //site styles
 @import "./components/home/Homepage.component";
