work on homepage

--- a/src/palette.scss
+++ b/src/palette.scss
@@ -1,1 +1,9 @@
 $main-bg: #212121;
+$divider-color: #000000;
+$banner-text: #ffffff;
+$text-shadow-color: rgba(88, 88, 88, .75);
+
+$nav-text-color: $main-bg;
+
+$nav-gradient-start: #fcfcfc;
+$nav-gradient-end: #afafaf;
