--- a/src/palette.scss
+++ b/src/palette.scss
@@ -9,7 +9,7 @@ $nav-text-color: $main-bg;
 $nav-gradient-start: #fcfcfc;
 $nav-gradient-end: #afafaf;
 
-$gold-gradient-end: #d4af37;
+$gold-gradient-end: #c9a22a;
 $gold-gradient-start: lighten($gold-gradient-end, 10%);
 
 $light-separator: #666;
