1. moved homepage jumbotron out to it's own ("Header") component. 2. enabled prop on header component to determine if it should render big (homepage) or small (subpage) based on prop. 3. flipped jumbotron image horizontally 4. moved branding from right to left on homepage 5. created banner for subpages...

--- a/src/site.scss
+++ b/src/site.scss
@@ -18,6 +18,7 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
 //site styles
+@import "./components/common/Header.component";
 @import "./components/common/Navbar.component";
 @import "./components/common/MailingListForm.component";
 @import "./components/common/TeeTimeCallout.component";
