put content on about page

--- a/src/components/common/Subpage.component.scss
+++ b/src/components/common/Subpage.component.scss
@@ -8,6 +8,17 @@
 
   .inner {
     display: flex;
+
+    .page-content{
+      padding-top: 48px;
+
+      h1{
+        font-family: 'Great Vibes', cursive;
+        font-size: 4.4rem;
+      }
+
+    }
+
   }
 
   .full-height {
