--- a/src/site.scss
+++ b/src/site.scss
@@ -30,6 +30,7 @@ $fa-font-path: "../../node_modules/font-awesome/fonts";
 @import "./components/tee-off/TeeOffPage.component";
 @import "./components/contact/ContactPage.component";
 @import "./components/photo-gallery/PhotoGalleryPage.component";
+@import "./components/thank-you/ThankYouPage.component";
 
 * {
   -webkit-box-sizing: border-box;
