--- a/src/components/contact/ContactPage.component.scss
+++ b/src/components/contact/ContactPage.component.scss
@@ -11,11 +11,21 @@
   }
 
   .message-body{
-    height: 480px;
+    height: 180px;
   }
 
   .form-container{
     padding-bottom: 14px;
   }
 
+  .address-container{
+    padding-bottom: 40px;
+    h3{
+      margin-top: 24px;
+    }
+
+    iframe{
+      border: solid 1px #ccc;
+    }
+  }
 }
