--- a/src/site.scss
+++ b/src/site.scss
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes|News+Cycle');
 
 //font awesome
-$fa-font-path: "../../node_modules/font-awesome/fonts";
+$fa-font-path: "../node_modules/font-awesome/fonts";
 @import "../node_modules/font-awesome/scss/font-awesome";
 
 //bootstrap
